# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_analyzer/: app.py  db_functions.py  db_quaries.py  normalize_url.py  parse_url.py
page_analyzer/database/: db_quaries.py  db_queries.py
page_analyzer/templates/: all_urls.html  footer.html  header.html  index.html  main.html  page_not_found.html  server_error.html  single_url.html
page_analyzer/url_handlers/: normalize_url.py  parse_url.py  validate_url.py
