[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer Web application that can gather and show basic SEO info"
authors = ["Vladislav25 <vladkhleborodov@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
gunicorn = "^20.1.0"
flask = "^2.2.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
validators = "^0.20.0"
requests = "^2.30.0"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "page_analyzer.app:app"
